# ChangeLog for dev-libs/nspr
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/nspr/ChangeLog,v 1.134 2010/02/09 04:33:08 anarchy Exp $

*nspr-4.8.3-r1 (09 Feb 2010)

  09 Feb 2010; <anarchy@gentoo.org> +nspr-4.8.3-r1.ebuild:
  remove unneeded configure options, fix debug/optimize

*nspr-4.8.3 (07 Feb 2010)

  07 Feb 2010; <anarchy@gentoo.org> +nspr-4.8.3.ebuild:
  version bump

*nspr-4.8.2-r1 (27 Jan 2010)

  27 Jan 2010; <anarchy@gentoo.org>
  +files/nspr-4.8-pkgconfig-gentoo-1.patch, +nspr-4.8.2-r1.ebuild:
  Ensure dynamic linking stays consistent for all

*nspr-4.8.2 (30 Nov 2009)

  30 Nov 2009; Jory A. Pratt <anarchy@gentoo.org> +nspr-4.8.2.ebuild,
  +files/nspr-4.8-config.patch, +files/nspr-4.8-pkgconfig-gentoo.patch:
  version bump

  12 Nov 2009; Joseph Jezak <josejx@gentoo.org> nspr-4.8.ebuild:
  Marked ppc64 stable for bug #280837.

  23 Sep 2009; Raúl Porcel <armin76@gentoo.org> nspr-4.8.ebuild:
  alpha/arm/ia64/sparc stable wrt #280837

  22 Sep 2009; Markus Meier <maekke@gentoo.org> nspr-4.8.ebuild:
  amd64 stable, bug #280837

  19 Aug 2009; Mounir Lamouri <volkmar@gentoo.org> nspr-4.8.ebuild:
  Stable for ppc. Bug 280837

  17 Aug 2009; Jeroen Roovers <jer@gentoo.org> nspr-4.8.ebuild:
  Stable for HPPA (bug #280837).

  14 Aug 2009; Christian Faulhammer <fauli@gentoo.org> nspr-4.8.ebuild:
  stable x86, bug 280837

  02 Aug 2009; Jeremy Olexa <darkside@gentoo.org> nspr-4.6.8.ebuild,
  nspr-4.7.3.ebuild, nspr-4.7.4.ebuild, nspr-4.8.ebuild:
  clean up non-acceptable language

*nspr-4.8 (24 Jun 2009)

  24 Jun 2009; <nirbheek@gentoo.org> +nspr-4.8.ebuild:
  Add nspr-4.8, dependency of firefox 3.5rc*

  01 May 2009; Markus Meier <maekke@gentoo.org> nspr-4.7.4.ebuild:
  amd64 stable, bug #267234

  30 Apr 2009; Raúl Porcel <armin76@gentoo.org> nspr-4.7.4.ebuild:
  alpha/arm/ia64/sparc stable wrt #267234

  30 Apr 2009; Jeroen Roovers <jer@gentoo.org> nspr-4.7.4.ebuild: