@@ -17,7 +17,7 @@ EBUILD nspr-4.6.8.ebuild 2878 RMD160 da21f42a60449deb1cf0ba4eca9f07388d3bf7fd SH
 EBUILD nspr-4.7.4.ebuild 3051 RMD160 2fdcac1915edd2c0eb214eac5595928d0c3ec22f SHA1 14c595cf6cee832c50505cf0d03ff6025524d4f2 SHA256 8d1ffd5b3b74b450c9161c5f38993c7ef36007e06a63d73ce71491877ae2173f
 EBUILD nspr-4.8.2-r1.ebuild 3180 RMD160 46caccbce87c3ba8eb7828aaef60535e94cc3594 SHA1 69d15b970d59806812f9a581279c85fa8682c844 SHA256 46b0578ed145de3d1c7beacd36c002fe51085c240d0489ef639b4acd0553a0a1
 EBUILD nspr-4.8.2.ebuild 3175 RMD160 67f4530a790f37686374e0b1fc39368a025b0751 SHA1 6a8038751f6441e0e3d62bf5d4c435dbed2a26fe SHA256 6e484ad35788ec878e237013ab71a0eb29dbbb05b520eea9ecde38ff666f675d
-EBUILD nspr-4.8.3-r1.ebuild 3077 RMD160 937c516906cf302b3c0f822b213105b368a1e9c6 SHA1 05b058bfc01908caa00eb7f3665247e5e41e8d6b SHA256 475ca210e091470d3a21cfd53dd328ed0c4861daca35e17747a4251c524f5979
+EBUILD nspr-4.8.3-r2.ebuild 2903 RMD160 241dcd22b9f9383e6fea6fd691900df641381655 SHA1 b8986d2564a8a488d5f7c55d82cff8ca0eefff7f SHA256 f1c54b0349c9179c4eb55f9503ac9cb1082b0c4792a59b1de117c92f71282e2b
 EBUILD nspr-4.8.ebuild 3129 RMD160 840e593bcde1050baa1fe65befe5fa95346773a8 SHA1 48c468e031a8913e531cf677941a1f1d978b6dc2 SHA256 fd5de200bbe944d42c1bfbca684d404101e4d2522dc1f82e80113cbb17718d06
-MISC ChangeLog 17152 RMD160 031fa41e86a620b44243fdd572529412808c0a88 SHA1 2b4d7c25977ffde3b8d2ccbcf30e38fc992f4eac SHA256 e633dfde45a0b9c0dc4ba4ca731c9c7d05226b12187c5ccfad855838196a81e9
+MISC ChangeLog 17361 RMD160 67d50632aab0b064e4ab64ca26da6d7ed7b0490c SHA1 1d91467d07e3bdfc46d85f72acf97c66d2253f1e SHA256 bf46d3228bb9e132901631ddacfecba15656592d4105c8de9cbbc16b50881551
 MISC metadata.xml 160 RMD160 d5a9f0bf8989621c2bde30facb53bcae00aba709 SHA1 5015c07af2083f20f9552d7fb11afb5ea69af345 SHA256 0cc5126362a12cee42ec1197c528a804cf36859329dd2c6d9225726831d14b8b
