@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/nspr
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/nspr/ChangeLog,v 1.134 2010/02/09 04:33:08 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/nspr/ChangeLog,v 1.135 2010/02/11 03:30:01 anarchy Exp $
+
+*nspr-4.8.3-r2 (11 Feb 2010)
+
+  11 Feb 2010; <anarchy@gentoo.org> -nspr-4.8.3.ebuild,
+  -nspr-4.8.3-r1.ebuild, +nspr-4.8.3-r2.ebuild:
+  Finish fixing upstream conerns about build issues, move to /usr/lib{64}
 
 *nspr-4.8.3-r1 (09 Feb 2010)
 
